<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:hint="@string/voice_draft_title"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-10dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-light"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-thin"
            android:text="00:00:00"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/aar_footer_height"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/restart"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/record"
            android:layout_toLeftOf="@+id/record"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/aar_ic_restart"
            android:onClick="restartRecording"
            android:visibility="invisible"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <ImageButton
            android:id="@+id/record"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/aar_ic_rec"
            android:onClick="toggleRecording"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <ImageButton
            android:id="@+id/play"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/record"
            android:layout_toRightOf="@+id/record"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/aar_ic_play"
            android:onClick="togglePlaying"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>