<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:title="@string/aar_save"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_cancel"
        android:title="cancel"
        android:visible="true"
        app:showAsAction="always"/>

</menu>